--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- connecting the normalize css styles-->
+    <!-- Connecting the normalize.css styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
 
-    <!-- include main fonts in html page-->
+    <!-- Include main fonts in HTML page -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@400;500;700&family=Raleway:ital,wght@400;500;700&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="./css/styles.css" />
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
