--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <!-- Header Section -->
     <header>
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo"><span>Web</span>Studio</a>
+            <a href="./index.html" class="header-logo">Web<span class="header-logo-span">Studio</span></a>
             <ul>
-                <li><a href="#studio" class="header-nav-title">Studio</a></li>
-                <li><a href="#portfolio" class="header-nav-title">Portfolio</a></li>
-                <li><a href="#contacts" class="header-nav-title">Contacts</a></li>
+                <li><a href="./index.html" class="header-nav-title">Studio</a></li>
+                <li><a href="" class="header-nav-title">Portfolio</a></li>
+                <li><a href="" class="header-nav-title">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-address">
@@ -46,8 +46,8 @@
 
         <!-- Hero Section -->
         <section id="hero" class="section-hero">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <h1 class="section-hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="section-hero-button">Order Service</button>
         </section>
 
         <!-- Services Section -->
