--- a/index.html
+++ b/index.html
@@ -55,23 +55,27 @@
             <h2 class="section-title">Our Expertise</h2>
             <ul>
                 <li class="section-list">
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <h3 class="servises-section-list-h3">Strategy</h3>
+                    <p class="servises-section-list-p">Our goal is to identify the business problem to walk away with
+                        the perfect and creative solution.
                     </p>
                 </li>
                 <li class="section-list">
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="servises-section-list-h3">Punctuality</h3>
+                    <p class="servises-section-list-p">Bring the key message to the brand's audience for the best price
+                        within the shortest possible
                         time.</p>
                 </li>
                 <li class="section-list">
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    <h3 class="servises-section-list-h3">Diligence</h3>
+                    <p class="servises-section-list-p">Research and confirm brands with the strongest digital growth
+                        opportunities and minimize risk.
                     </p>
                 </li>
                 <li class="section-list">
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="servises-section-list-h3">Technologies</h3>
+                    <p class="servises-section-list-p">Design practice focused on digital experiences. We bring forth a
+                        deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -79,32 +83,32 @@
 
         <!-- Our Team Section -->
         <section id="team" class="section-team">
-            <h2 class="section-title">Our Team</h2>
+            <h2 class="section-title-h2">Our Team</h2>
             <ul>
                 <li class="section-list">
                     <img src="./images/employee4.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-section-h3">Mark Guerrero</h3>
+                    <p class="team-section-p">Product Designer</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/employee3.jpg" alt="Tom Ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-section-h3">Tom Ford</h3>
+                    <p class="team-section-p">Frontend Developer</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/employee2.jpg" alt="Camila Garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-section-h3">Camila Garcia</h3>
+                    <p class="team-section-p">Marketing</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/employee1.jpg" alt="Daniel Wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-section-h3">Daniel Wilson</h3>
+                    <p class="team-section-p">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section id="portfolio" class="section-portfolio">
-            <h2 class="section-title">Our Portfolio</h2>
+            <h2 class="section-title-h2">Our Portfolio</h2>
             <ul>
                 <li class="section-list">
                     <img src="./images/portfolio1.jpg" alt="Banking App">
