--- a/index.html
+++ b/index.html
@@ -83,62 +83,62 @@
 
         <!-- Our Team Section -->
         <section id="team" class="section-team">
-            <h2 class="section-title-h2">Our Team</h2>
+            <h2 class="section-title-head">Our Team</h2>
             <ul>
                 <li class="section-list">
                     <img src="./images/employee4.jpg" alt="Mark Guerrero" width="264">
-                    <h3 class="team-section-h3">Mark Guerrero</h3>
+                    <h3 class="team-section-h">Mark Guerrero</h3>
                     <p class="team-section-p">Product Designer</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/employee3.jpg" alt="Tom Ford" width="264">
-                    <h3 class="team-section-h3">Tom Ford</h3>
+                    <h3 class="team-section-h">Tom Ford</h3>
                     <p class="team-section-p">Frontend Developer</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/employee2.jpg" alt="Camila Garcia" width="264">
-                    <h3 class="team-section-h3">Camila Garcia</h3>
+                    <h3 class="team-section-h">Camila Garcia</h3>
                     <p class="team-section-p">Marketing</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/employee1.jpg" alt="Daniel Wilson" width="264">
-                    <h3 class="team-section-h3">Daniel Wilson</h3>
+                    <h3 class="team-section-h">Daniel Wilson</h3>
                     <p class="team-section-p">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section id="portfolio" class="section-portfolio">
-            <h2 class="section-title-h2">Our Portfolio</h2>
+            <h2 class="section-title-head">Our Portfolio</h2>
             <ul>
                 <li class="section-list">
                     <img src="./images/portfolio1.jpg" alt="Banking App">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-section-h">Banking App</h3>
+                    <p class="portfolio-section-p">App</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/portfolio2.jpg" alt="Cashless Payment">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-section-h">Cashless Payment</h3>
+                    <p class="portfolio-section-p">Marketing</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/portfolio3.jpg" alt="Meditation App">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-section-h">Meditation App</h3>
+                    <p class="portfolio-section-p">App</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/portfolio4.jpg" alt="Taxi Service">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-section-h">Taxi Service</h3>
+                    <p class="portfolio-section-p">Marketing</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/portfolio5.jpg" alt="Screen Illustrations">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-section-h">Screen Illustrations</h3>
+                    <p class="portfolio-section-p">Design</p>
                 </li>
                 <li class="section-list">
                     <img src="./images/portfolio6.jpg" alt="Daniel Wilson">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-section-h">Online Courses</h3>
+                    <p class="portfolio-section-p">Marketing</p>
                 </li>
             </ul>
         </section>
