--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
             <h2 class="section-title">Our Expertise</h2>
             <ul>
                 <li class="section-list">
-                    <h3 class="servises-section-list-h3">Strategy</h3>
+                    <h3 class="servises-section-list-h">Strategy</h3>
                     <p class="servises-section-list-p">Our goal is to identify the business problem to walk away with
                         the perfect and creative solution.
                     </p>
                 </li>
                 <li class="section-list">
-                    <h3 class="servises-section-list-h3">Punctuality</h3>
+                    <h3 class="servises-section-list-h">Punctuality</h3>
                     <p class="servises-section-list-p">Bring the key message to the brand's audience for the best price
                         within the shortest possible
                         time.</p>
                 </li>
                 <li class="section-list">
-                    <h3 class="servises-section-list-h3">Diligence</h3>
+                    <h3 class="servises-section-list-h">Diligence</h3>
                     <p class="servises-section-list-p">Research and confirm brands with the strongest digital growth
                         opportunities and minimize risk.
                     </p>
                 </li>
                 <li class="section-list">
-                    <h3 class="servises-section-list-h3">Technologies</h3>
+                    <h3 class="servises-section-list-h">Technologies</h3>
                     <p class="servises-section-list-p">Design practice focused on digital experiences. We bring forth a
                         deep passion for
                         problem-solving.</p>
@@ -111,32 +111,32 @@
             <h2 class="section-title-head">Our Portfolio</h2>
             <ul>
                 <li class="section-list">
-                    <img src="./images/portfolio1.jpg" alt="Banking App">
+                    <img src="./images/portfolio1.jpg" alt="Banking App" width="360">
                     <h3 class="portfolio-section-h">Banking App</h3>
                     <p class="portfolio-section-p">App</p>
                 </li>
                 <li class="section-list">
-                    <img src="./images/portfolio2.jpg" alt="Cashless Payment">
+                    <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
                     <h3 class="portfolio-section-h">Cashless Payment</h3>
                     <p class="portfolio-section-p">Marketing</p>
                 </li>
                 <li class="section-list">
-                    <img src="./images/portfolio3.jpg" alt="Meditation App">
+                    <img src="./images/portfolio3.jpg" alt="Meditation App" width="360">
                     <h3 class="portfolio-section-h">Meditation App</h3>
                     <p class="portfolio-section-p">App</p>
                 </li>
                 <li class="section-list">
-                    <img src="./images/portfolio4.jpg" alt="Taxi Service">
+                    <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360">
                     <h3 class="portfolio-section-h">Taxi Service</h3>
                     <p class="portfolio-section-p">Marketing</p>
                 </li>
                 <li class="section-list">
-                    <img src="./images/portfolio5.jpg" alt="Screen Illustrations">
+                    <img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="portfolio-section-h">Screen Illustrations</h3>
                     <p class="portfolio-section-p">Design</p>
                 </li>
                 <li class="section-list">
-                    <img src="./images/portfolio6.jpg" alt="Daniel Wilson">
+                    <img src="./images/portfolio6.jpg" alt="Daniel Wilson" width="360">
                     <h3 class="portfolio-section-h">Online Courses</h3>
                     <p class="portfolio-section-p">Marketing</p>
                 </li>
@@ -145,9 +145,12 @@
 
     </main>
     <!-- Footer Section -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-style">Studio</span></a>
+        <p class="footer-p">
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+        </p>
     </footer>
 
 </body>
